<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/tabbg"
            android:orientation="horizontal">


            <com.ydh.gva.widget.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_one"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:gva_icon="@drawable/ic_menu_start_conversation"
                zhy:gva_text="@string/tab_one"
                zhy:gva_text_size="12sp" />

            <com.ydh.gva.widget.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_two"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:gva_icon="@drawable/ic_menu_friendslist"
                zhy:gva_text="@string/tab_two"
                zhy:gva_text_size="12sp" />

            <com.ydh.gva.widget.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_three"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:gva_icon="@drawable/ic_menu_friendslist"
                zhy:gva_text="@string/tab_three"
                zhy:gva_text_size="12sp" />

            <com.ydh.gva.widget.ChangeColorIconWithTextView
                android:id="@+id/id_indicator_four"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="5dp"
                zhy:gva_icon="@drawable/ic_menu_friendslist"
                zhy:gva_text="@string/tab_foru"
                zhy:gva_text_size="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="top"
            android:background="@drawable/background" />
    </FrameLayout>
</LinearLayout>